--- a/components/sections/Contact.module.css
+++ b/components/sections/Contact.module.css
@@ -1,7 +1,7 @@
 .formBackground {
-    background-color: #f8f8ff;
-    background-size: 60px 60px;
     position: relative;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(248, 248, 255, 1) 100px);
+    box-shadow: 0px -10px 10px rgba(0, 0, 0, 0.07);
   }
   
   .glassCard {
